# teccampos

./: .gitignore
backend/tec/: pyproject.toml
backend/tec/src/: alembic.ini  main.py  pyproject.toml  startapp.py
backend/tec/src/alembic/: env.py
backend/tec/src/alembic/versions/: 1c6eba06d4be_adding_pratica_chave.py  89b4018f2bd5_adding_fields.py  a26ac0f1954b_adding_fields.py  c04a6f09e0f8_adding_fields.py  cb2779687942_first_commit.py  d3bb089d22ac_first_commit.py  e7ff9d72caff_startapp.py
backend/tec/src/domain/models/: agenda.py  agenda_model.py  equipe_model.py  planejamento_financeiro_model.py  planejamento_mercado_model.py  pratica_chave.py  questionario_model.py  user_status_model.py
backend/tec/src/domain/schemas/: agenda_schema.py  membro_schema.py  planejamento_mercado_schema.py  pratica_chave_schema.py  questionario_schema.py  user_schema.py  user_status.py
backend/tec/src/domain/security/: users.py
backend/tec/src/infra/: database.py
backend/tec/src/repository/agenda/: agenda_repository.py
backend/tec/src/repository/membros/: membros_repository.py
backend/tec/src/repository/planejamento_mercado/: planejamento_mercado_repository.py
backend/tec/src/repository/praticachave/: pratica_chave_repository.py
backend/tec/src/repository/questionario/: questionario_repository.py  questionario_repostory.py
backend/tec/src/repository/status/: user_status_repository.py
backend/tec/src/repository/users/: users_repository.py
backend/tec/src/routers/agenda/: agenda.py  agenda_router.py
backend/tec/src/utils/: configurations.py
(+41 files in other folders)
