[project]
name = "tec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "fastapi[standard]>=0.120.0",
    "logfire[asyncpg,fastapi,httpx,sqlalchemy,system-metrics]>=4.14.2",
    "loguru>=0.7.3",
    "psycopg2>=2.9.11",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.44",
]
